syntax = "proto3";

package com.apihug.demo.inventory.proto.api.storage.response;

import "extend/domain.proto";
import "swagger/annotations.proto";

option (hope.domain.kind) = BEAN;

message StorageLocationAddedResponse {
  option (hope.swagger.schema) = {
    json_schema: {
      description: "storage location added";
    };
  };
  int64 storage_location_id = 1 [(hope.swagger.field) = {
    description: "id of this storage location";
    example: "11";
    empty: FALSE
  }];


  string name = 2 [(hope.swagger.field) = {
    description: "name of the location";
    example: "A1-112-5B"
    empty: FALSE;
    mock: {
      nature: NAME
    }
    max_length: {
      value: 32
    }
  }];

  string remark = 3 [(hope.swagger.field) = {
    description: "comment of this";
  }];

}

message StorageLocationDeletedResponse {

  option (hope.swagger.schema) = {
    json_schema: {
      description: "Storage location deleted";
    };
  };

  int64 storage_location_id = 1 [(hope.swagger.field) = {
    description: "id of this storage location";
    example: "11";
    default: "1";
  }];

  string reason = 2 [(hope.swagger.field) = {
    description: "reason of delete it";
    example: "no happy";
  }];

}